# TaskBDDC

./: CMakeLists.txt  bddc.hpp  block_matrix.hpp  cg.hpp  generate_idxs.sh  main.cpp  omptasktool.c  omptasktool.h  overlapping_vector.hpp
matrices/: CMakeLists.txt  bndry_0.txt  bndry_1.txt  bndry_2.txt  bndry_3.txt  config.hpp.in  global.gko  inner_1.txt  inner_2.txt  inner_3.txt  local_0.gko  local_1.gko  local_2.gko  local_3.gko  local_idxs_1.txt  local_idxs_2.txt  local_idxs_3.txt
test/: CMakeLists.txt  bddc.cpp  block_matrix.cpp  cg.cpp  overlapping_vector.cpp  util.hpp  vector_utils.hpp
